Changed .css files to the new color pallate.  Made it so that content will grow to 1200px, then stop, creating a white body background behind the content.  Set footer to sticky so that content is centered when 1200px is reached.

--- a/styles/FAQs.css
+++ b/styles/FAQs.css
@@ -1,15 +1,36 @@
 .FAQ-question {
-    color: blue;
+    color: #33a852;
     overflow: hidden;
 }
 
 .FAQ-container {
     width: 80%;
     margin-left: 10%;
+    background-color: white;
+}
+
+.FAQ-container:visited{
+    outline: black;
 }
 
 .FAQ-answers {
     width: 80%;
     overflow: hidden;
     margin-left: 10%;
+}
+
+button:active{
+    background-color: white;
+}
+
+button:focus{
+    background-color: white;
+}
+
+body{
+    background-color: white;
+}
+
+#contents{
+    background-color: #e8f6e8;
 }
