--- a/styles/formcopygreeny.css
+++ b/styles/formcopygreeny.css
@@ -4,8 +4,9 @@
        * element that contains the map. */
 #map {
     height: 60%;
-    width: 80%;
-    margin-left: 10%;
+    width: 1000px;
+    max-width: 80%;
+    margin: 0 auto;
     border-radius: 12px 12px 12px 12px;
     border: 5px double grey;
 }
@@ -20,6 +21,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: #e8f6e8;
 }
 
 #header {
@@ -101,13 +103,13 @@ h1 {
 
 #origin-input:focus,
 #destination-input:focus {
-    border-color: #FEC10B;
+    border-color: #33a852;
 }
 
 #mode-selector {
     display: none;
     color: #fff;
-    background-color: #FEC10B;
+    background-color: #33a852;
     margin-left: 12px;
     padding: 5px 11px 0px 11px;
 }
@@ -125,6 +127,8 @@ h1 {
 }
 
 .btn-xl {
+    width: 100%;
+    margin: 0 auto;
     padding: 10px 10px;
     font-size: 20px;
     border-radius: 10px;
@@ -132,12 +136,16 @@ h1 {
     font-size: 14pt;
     word-spacing: .4em;
     font-weight: 220;
-    margin-top: -2.5rem;
-    color: #FEC10B;
+    transform: translate(0, -20%);
+    color: #33a852;
     border: 5px double black;
 }
 
 .btn-xl:hover{
-    border-color: #FEC10B;
-    color: #FEC10B;
+    border-color: #33a852;
+    color: #33a852;
+}
+
+a {
+    display: block;
 }
